@@ -30,14 +30,20 @@ GML writing is always supported, even without Xerces or Expat.<p>
 Since OGR 1.8.0, the GML driver has coordinate system support. This is
 only reported when all the geometries of a layer have a srsName attribute,
 whose value is the same for all geometries. For srsName such as "urn:ogc:def:crs:EPSG:",
-for geographic coordinate systems (as returned by WFS 1.1.0), the axis order
+for geographic coordinate systems (as returned by WFS 1.1.0 for example), the axis order
 should be (latitude, longitude) as required by the standards, but this is
 unusual and can cause issues with applications unaware of axis order. So
 by default, the driver will swap the coordinates so that they are in the
 (longitude, latitude) order and report a SRS without axis order specified.
-It is possible to get (latitude, longitude) order and SRS with axis order
+It is possible to get the original (latitude, longitude) order and SRS with axis order
 by setting the configuration option <b>GML_INVERT_AXIS_ORDER_IF_LAT_LONG</b>
 to <b>NO</b>.<p>
+There also situations where the srsName is of the form "EPSG:XXXX" (whereas
+"urn:ogc:def:crs:EPSG::XXXX" would have been more explicit on the intent) and
+the coordinates in the file are in (latitude, longitude) order. By default, OGR will
+not consider the EPSG axis order and will report the coordinates in (latitude,longitude)
+order. However, if you set the configuration option <b>GML_CONSIDER_EPSG_AS_URN</b> to
+<b>YES</b>, the rules explained in the previous paragraph will be applied.<p>
 
 In contrast to most GML readers, the OGR GML reader does not require
 the presence of an XML Schema definition of the feature classes (file with .xsd
